--- a/app/[id]/BlogCommentsList/BlogCommentsList.module.css
+++ b/app/[id]/BlogCommentsList/BlogCommentsList.module.css
@@ -1,16 +1,17 @@
-.form {
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 25px;
+  padding-bottom: 50px;
 }
 
-.heading {
-
-}
-
-.wrapper {
+.wrapper  {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 3px;
+}
+
+.wrapper h3,
+.wrapper p {
+  margin: 0;
 }
