--- a/app/components/Input/Input.module.css
+++ b/app/components/Input/Input.module.css
@@ -8,12 +8,13 @@
 }
 
 .input {
-  padding: 7px;
+  max-width: 150px;
+  padding: 5px;
   border-radius: 6px;
-  font-size: 16px;
+  font-size: 14px;
   background: #fbfbfb;
   border: 2px solid transparent;
-  height: 36px;
+  min-height: 26px;
   box-shadow: 0 0 0 1px #dddddd, 0 2px 4px 0 rgb(0 0 0 / 7%), 0 1px 1.5px 0 rgb(0 0 0 / 5%);
 }
 
