--- a/app/BlogList.module.css
+++ b/app/BlogList.module.css
@@ -1,14 +1,23 @@
 .container {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
-    gap: 15px;
-    border: 1px solid black;
-    margin: 0 auto;
+    align-content: center;
+    gap: 50px;
 }
 
 .blog {
+    max-width: 720px;
+    width: 100%;
     padding: 15px 20px;
-    border: 1px solid grey;
+    transition: transform 0.7s ease;
+    border-radius: 10px;
+    background-color: rgb(244, 244, 244);
+}
+
+.blog:hover,
+.blog:focus {
+  transform: scale(1.1);
 }
 
 .link {
@@ -17,6 +26,8 @@
     align-items: center;
     text-decoration: none;
     color: black;
+    gap: 10px;
+
 }
 
 .title {
@@ -26,6 +37,8 @@
 
 .paragraphWrapper {
     font-size: 1rem;
+    margin-bottom: 0;
+    line-height: 1.2;
 }
 
 .paragraph {
@@ -33,6 +46,23 @@
     word-wrap: break-word;
 }
 
+.tagWrapper {
+    display: flex;
+    justify-content: flex-end;
+    padding: 5px;
+}
+
 .tag {
-    font-size: 1rem;
+    border: 1px solid black;
+    text-decoration: none;
+    padding: 2.5px 5px;
+    color: white;
+    border-radius: 3px;
+    background-color: #666666;
+}
+
+.buttonWrapper {
+    display: flex;
+    gap: 50px;
+    justify-content: center;
 }
