--- a/app/[id]/BlogCommentsList/BlogCommentsList.module.css
+++ b/app/[id]/BlogCommentsList/BlogCommentsList.module.css
@@ -1,17 +1,20 @@
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   padding-bottom: 50px;
+  gap: 5px;
 }
 
 .wrapper  {
   display: flex;
   flex-direction: column;
   gap: 3px;
+  min-width: 500px;
 }
 
-.wrapper h3,
-.wrapper p {
-  margin: 0;
+.timestamp {
+  display: flex;
+  justify-content: flex-end;
 }
+
