--- a/app/components/Form/Form.module.css
+++ b/app/components/Form/Form.module.css
@@ -1,12 +1,8 @@
 .form {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   padding: 25px;
-}
-
-.heading {
-
 }
 
 .wrapper {
