--- a/app/components/Navbar/Navbar.module.css
+++ b/app/components/Navbar/Navbar.module.css
@@ -1,17 +1,33 @@
-.nav{
+.nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 25px 20px;
+  background: linear-gradient(to right, white, rgba(65, 65, 65, 0.6));
+  text-decoration: none;
+  margin-bottom: 50px;
+  gap: 50px;
+}
 
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    gap: 20px;
-    padding: 15px 10px;
-    background: linear-gradient(to right, white, rgba(65, 65, 65, 0.6));
-    text-decoration: none;
+.navItem {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 20px;
+}
 
-  }
-  
-  .link{
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-  }
+.link {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.link:hover,
+.link:active {
+  transform: scale(1.2);
+}
+
+.admin { 
+  font-size: 12px;
+}
