--- a/app/components/Textarea/Textarea.module.css
+++ b/app/components/Textarea/Textarea.module.css
@@ -1,8 +1,9 @@
 .textarea {
-  width: 250px;
+  min-width: 450px;
+  min-height: 80px;
   padding: 7px;
   border-radius: 6px;
-  font-size: 16px;
+  font-size: 14px;
   background: #fbfbfb;
   border: 2px solid transparent;
   box-shadow: 0 0 0 1px #dddddd, 0 2px 4px 0 rgb(0 0 0 / 7%), 0 1px 1.5px 0 rgb(0 0 0 / 5%);
