--- a/app/protected/comments/AdminComments.module.css
+++ b/app/protected/comments/AdminComments.module.css
@@ -1,12 +1,16 @@
 .container { 
+  width: 80%;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 25px;
+  padding: 50px 20px;
 }
 
 .wrapper  {
   display: flex;
   justify-content: space-between;
+  gap: 15px;
   width: 100%;
   align-items: center;
 }
@@ -14,12 +18,29 @@
 .commentContent {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   align-items: flex-start;
   gap: 5px;
+  border-bottom: 2px solid rgb(0, 0, 0, 0.7);
+}
+
+.author {
+  font-size: 1.35rem;
+  font-weight: bold;
+  margin: 0 0 5px 0;
+}
+
+.comment {
+  font-size: 1.15rem;
+  margin: 0;
 }
 
 .blog {
   text-decoration: none;
-  font-size: 12px;
-  font-weight: 700;
+  font-size: 0.8rem;
+  font-weight: 500;
+  margin-bottom: 10px;
 }
+
+
+
