--- a/app/[id]/BlogCommentsList/BlogCommentsList.module.css
+++ b/app/[id]/BlogCommentsList/BlogCommentsList.module.css
@@ -2,19 +2,35 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding-bottom: 50px;
-  gap: 5px;
+  gap: 15px;
+  margin: 0 auto;
+  width: 80%;
 }
 
 .wrapper  {
+  width: 100%;
+  padding: 10px 20px;
   display: flex;
   flex-direction: column;
-  gap: 3px;
-  min-width: 500px;
+  border-radius: 5px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
+.author {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0 0 5px 0;
+}
+
+.comment {
+  font-size: 16px;
+  margin: 0;
 }
 
 .timestamp {
+  font-size: 14px;
+  color: #888;
   display: flex;
   justify-content: flex-end;
+  margin: 0;
 }
-
