--- a/app/[id]/BlogDetails/BlogDetails.module.css
+++ b/app/[id]/BlogDetails/BlogDetails.module.css
@@ -1,7 +1,17 @@
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 35px 70px;
-  gap: 10px;
+.container {
+  width: 80%;
+  margin: 0 auto;
 }
+
+.image {
+  width: 100%;
+  height: auto;
+  border-radius: 3px;
+}
+
+.title {
+  font-size: 3.5rem;
+  font-weight: 700;
+  text-align: center;
+}
+
