--- a/app/components/Button/Button.module.css
+++ b/app/components/Button/Button.module.css
@@ -4,25 +4,24 @@
 }
 
 .button {
+  min-width: 155px;
   background-color: #222;
   border-radius: 4px;
   border-style: none;
   color: #fff;
   cursor: pointer;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 700;
-  line-height: 1.5;
+  line-height: 1.3;
   margin: 0;
   outline: none;
   overflow: hidden;
-  padding: 10px 20px;
+  padding: 9px 18px;
   text-align: center;
   text-transform: none;
-  user-select: none;
-  touch-action: manipulation;
 
   &.small{ 
-    padding: 7.5px 15px;
+    padding: 8px 12px;
     font-size: 12px;
   }
 }
