--- a/app/components/Input/Input.module.css
+++ b/app/components/Input/Input.module.css
@@ -8,13 +8,11 @@
 }
 
 .input {
-  max-width: 150px;
-  padding: 5px;
+  font-size: 0.75rem;
+  padding: 10px;
   border-radius: 6px;
-  font-size: 14px;
   background: #fbfbfb;
   border: 2px solid transparent;
-  min-height: 26px;
   box-shadow: 0 0 0 1px #dddddd, 0 2px 4px 0 rgb(0 0 0 / 7%), 0 1px 1.5px 0 rgb(0 0 0 / 5%);
 }
 
