--- a/app/components/Navbar/Navbar.module.css
+++ b/app/components/Navbar/Navbar.module.css
@@ -1,26 +1,34 @@
 .nav {
   display: flex;
-  justify-content: flex-end;
   align-items: center;
   padding: 25px 20px;
-  background: linear-gradient(to right, white, rgba(65, 65, 65, 0.6));
-  text-decoration: none;
-  margin-bottom: 50px;
-  gap: 50px;
+  background: rgb(250, 250, 250);
+  width: 100%;
+  position: sticky;
+  top: 0;
+  z-index: 100; 
 }
 
 .navItem {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  flex-grow: 1.5;
   gap: 20px;
 }
 
+.navItemNonAdmin {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+}
+
 .link {
-  color: white;
+  color: black;
   text-decoration: none;
   font-weight: bold;
   font-size: 20px;
+
 }
 
 .link:hover,
@@ -28,6 +36,13 @@
   transform: scale(1.2);
 }
 
+.user {
+  display: flex;
+  flex-grow: 1.25;
+  justify-content: flex-end;
+}
+
 .admin { 
   font-size: 12px;
 }
+
