--- a/app/globals.css
+++ b/app/globals.css
@@ -1,14 +1,28 @@
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
 body {
   color: #000;
-  background-color: #fefefe;
+  background-image: url(https://png.pngtree.com/background/20210714/original/pngtree-futuristic-shape-abstract-background-chemistry-technology-concept-for-website-picture-image_1250295.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 0; 
+  padding: 0;
+  min-height: 100vh;
+  font-family: 'Roboto';
 }
 
-section {
-  padding: 50px 250px
+.contentWrapper {
+  max-width: 85%;
+  margin: 0 auto; 
+  padding: 150px 0; 
+  background-color: white;
+  min-height: 100vh;
+}
+
+.blogDetails {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
